Force recalc of the keyloop for alerts.

BUG=638492, 383820
TEST=javascript:prompt("hi")

Review-Url: https://codereview.chromium.org/2252913003
Cr-Commit-Position: refs/heads/master@{#412622}

Former-commit-id: 5cd8a4ffe3f7262c8da2b7878c9766787afc09c8